--- a/DriveOnTime.AppHost/DriveOnTime.AppHost.csproj
+++ b/DriveOnTime.AppHost/DriveOnTime.AppHost.csproj
@@ -13,6 +13,7 @@
 
   <ItemGroup>
     <PackageReference Include="Aspire.Hosting.AppHost" Version="9.2.0" />
+    <PackageReference Include="AspireMobile.Hosting" Version="0.7.130-beta" />
   </ItemGroup>
 
   <ItemGroup>
